fix: setting visibility of pie-chart percentages to hidden md-block

--- a/app/globals.css
+++ b/app/globals.css
@@ -139,3 +139,15 @@ body {
   background-color: white; /* Cor das partículas */
   animation: float 3s infinite linear; /* Animação de flutuação */
 }
+
+.parent .hidden {
+  /* Seletor mais específico */
+  display: none;
+}
+
+@media (min-width: 640px) {
+  .parent .sm\:block {
+    /* Seletor mais específico */
+    display: block;
+  }
+}
